# report_fortal

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: database.duckdb
data/processed/: dataset.csv  dataset_completo.csv
data/raw/abr-2025/: chaves.json  chaves_casas.json  chaves_condominio.json  lopes.json
data/raw/jun-2025/: chaves.json  vivareal.json  zap.json
data/raw/mai-2025/: chaves.json  olx.json  vivareal.json  zap.json
dwh/: dbt_project.yml
dwh/models/bronze/: bronze_jun.sql  schema.yml  source.yml
dwh/models/gold/: mart_localizacao.sql  mart_tipos.sql  obt_imoveis.sql  schema.yml
dwh/models/silver/: schema.yml  silver_abr.sql  silver_jun.sql  silver_mai.sql
dwh_imv/: dbt_project.yml
dwh_imv/models/bronze/: bronze_abr.sql  bronze_mai.sql  schema.yml
dwh_imv/models/gold/obt/: gold_imoveis_obt.sql  schema.yml
dwh_imv/models/silver/: schema.yml  silver_abr.sql  silver_mai.sql
src/dashboard/: app.py  utils.py
src/extract/: settings.py
src/extract/spiders/: chaves.py  olx.py  vivareal.py  zap.py
src/load/: data_ingestion.py
